# MaxFlash

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_COMMANDS.ps1  DEPLOY_COMMANDS.sh  Dockerfile.api  Dockerfile.dashboard  ENV_TEMPLATE.txt  FINAL_STATUS.txt  FINAL_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  INTEGRATION_GUIDE.md  Makefile  OPTIMIZATION_GUIDE.md  PROJECT_STATUS.md  PUSH_NOW.bat  PUSH_TO_GITHUB.bat  PUSH_TO_GITHUB.sh  QUICKSTART.md  QUICK_PUSH.md  QUICK_SETUP.md  QUICK_START.md  QUICK_START_NEW.md  QUICK_START_PARTNER.md  README.md  README_DASHBOARD.md  README_FIXES.md  README_IMPROVEMENTS.md  README_NEW.md  README_QUICK_START.md  README_SIMPLE.md  (+120 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  (+4 more)
.history/: README_SETUP_20251119103842.md  check_telegram_bot_20251115171911.py  check_telegram_bot_20251115171916.py  check_telegram_bot_20251115171921.py  check_telegram_bot_20251115171931.py  check_telegram_bot_20251115172318.py  run_20251114175621.py  run_20251114175707.py  run_20251114180820.py  run_20251114180831.py  run_20251114180835.py  run_20251114180839.py  run_20251114180843.py  run_20251114180847.py  run_20251114180852.py  run_20251114180856.py  run_20251114180906.py  run_20251114180926.py  run_20251114180936.py  run_20251114181024.py  start_20251115173041.py  start_hidden_20251115171659.vbs  start_hidden_20251115192559.vbs  test_server_20251114175039.py  test_server_20251114175217.py  ЗАПУСК_20251115172318.bat  ЗАПУСК_20251115192648.bat  ЗАПУСК_БЕЗ_ОКНА_20251115172318.bat  НАЧНИ_ОТСЮДА_20251116194310.txt  НОВЫЕ_ВОЗМОЖНОСТИ_20251128151331.md
api/: __init__.py  dependencies.py  exchange_adapter.py  main.py  market_api.py  models.py
app/: __init__.py  config.py  database.py  main.py
backtest_results/: backtest_20251207_204112.csv
bots/: __init__.py
config/: __init__.py  config.json  market_config.py  strategy_params.json
cython_ext/: README.md  __init__.py  feature_calc.pyx  scoring.pyx  setup.py
docs/: CI_CD.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  ML_TENSORFLOW_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_DEPLOY.md  QUICK_START.md  README_BACKGROUND.md  README_DASHBOARD.md  README_SETUP.md  REALTIME_MONITORING.md  RESEARCH_INTEGRATIONS.md  TELEGRAM_BOT_SIGNALS.md  VERSION_CONTROL.md  WEBSOCKET_INTEGRATION.md  strategy_documentation.md  testing_guide.md
infra/: Dockerfile  docker-compose.yml  maxflash-bot.service  maxflash-dashboard.service  maxflash-retrain.service  maxflash-retrain.timer
ml/: __init__.py  confidence_calculator.py  confidence_calculator_v2.py  ensemble_model.py  feature_engineering.py  feature_store.py  labeling.py  labeling_fixed.py  lightgbm_model.py  llm_interpreter.py  lstm_signal_generator.py  sentiment_analyzer.py  signal_filter.py  whale_detector.py
models/: lightgbm_enhanced_20251207_155119.pkl  lightgbm_enhanced_20251207_155119.pkl_meta.pkl  lightgbm_enhanced_20251207_184249.pkl  lightgbm_enhanced_20251207_184249.pkl_meta.pkl  lightgbm_enhanced_20251207_192325.pkl  lightgbm_enhanced_20251207_192325.pkl_meta.pkl  lightgbm_latest.pkl  lightgbm_latest.pkl_meta.pkl  lightgbm_quick.pkl  lightgbm_quick.pkl_meta.pkl  training_metadata_20251207_131507.txt  training_metadata_20251207_155119.txt  training_metadata_20251207_184249.txt  training_metadata_20251207_192325.txt
patches/: dashboard_v2_fix_signals.py
scripts/: README_TRAINING.md  auto_commit_push.bat  auto_commit_push.sh  auto_retrain.py  auto_retrain_v2.py  backfill_data.py  backtest_strategy.py  check_db.py  check_probs.py  cleanup_project.py  create_dev_branch.bat  create_dev_branch.sh  debug_imports_minimal.py  deploy_changes.sh  deploy_multi_source.sh  deploy_server.sh  deploy_to_server.py  find_optimal_confidence.py  generate_test_report.py  init_db.py  optimize_risk_params.py  quick_start.py  quick_test.py  quick_train.py  run_backtest.py  run_backtest_improved.py  run_comprehensive_backtest.py  run_confidence_optimization.py  run_on_server.py  run_tests.py  run_walk_forward_backtest.py  setup_project.py  simple_backtest.py  sync_to_server.ps1  sync_to_server.py  sync_version.py  sync_with_posh_ssh.ps1  test_basic_parameters.py  test_confidence_thresholds.py  test_github.py  (+7 more)
services/: __init__.py  llm_engine.py
strategies/: base_strategy.py  smc_footprint_strategy.py
telegram_bot/: bot.py
tests/: conftest.py  run_tests.py  test_anomaly_detector.py  test_confluence.py  test_delta.py  test_fair_value_gaps.py  test_market_profile.py  test_market_structure.py  test_order_blocks.py  test_risk_manager.py  test_scam_detector.py  test_signal_generator.py  test_smoke.py  test_volume_profile.py
trading/: __init__.py  mtf_analyzer.py  order_executor.py  outcome_tracker.py  patterns.py  risk_manager.py  signal_direction.py  signal_logger.py  signal_validator.py  signals_service.py  trading_config.py
utils/: advanced_signal_validator.py  anomaly_detector.py  async_data_loader.py  async_exchange.py  backtest_analyzer.py  confluence.py  data_fetcher.py  data_validator.py  enhanced_signal_generator.py  error_handler.py  exchange_manager.py  logger_config.py  market_alerts.py  market_analytics.py  market_cache.py  market_data_manager.py  market_monitor.py  multi_source_provider.py  order_manager.py  performance.py  position_manager.py  profit_tracker.py  risk_manager.py  signal_generator.py  signal_integrator.py  signal_scanner.py  telegram_bot.py  trading_executor.py  universe_selector.py  websocket_manager.py
web_interface/: MODERN_INTERFACE.md  QUICK_START.md  QUICK_VIEW.md  README.md  app.py  app_modern.py  app_simple.py  background_updater.py  config.py  dashboard.py  dashboard_config.py  dashboard_demo.html  dashboard_v2.py  demo.html  demo_modern.html  install_and_run.bat  show_demo.bat  start.bat  start_dashboard.bat  start_dashboard.sh  start_modern.bat  ОТКРЫТЬ_ИНТЕРФЕЙС.txt  ПРОСТОЙ_ЗАПУСК.txt
(+212 files in other folders)
